// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Primary Care Provider should render Error Screen in UI When providerDetails is undefined 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="card-main large-section"
      >
        <div>
          <h1
            class="title-1 title-2"
          >
            My Primary Care Provider
          </h1>
          <span
            style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
          />
          <div
            class="card-main neutral container mt-4"
          >
            <div
              class="flex flex-row flex flex-row align-top m-4"
            >
              <img
                alt="alert"
                class="icon"
                data-nimg="1"
                decoding="async"
                height="40"
                loading="lazy"
                src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                style="color: transparent;"
                width="40"
              />
              <span
                style="display: block; width: 8px; min-width: 8px; height: 1px; min-height: 1px;"
              />
              <div
                class="flex flex-row flex flex-col flex-grow"
              >
                <p
                  class="body-1"
                >
                  Oops, it looks like something went wrong. Try again later.
                </p>
              </div>
            </div>
          </div>
          <span
            style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
          />
          <a
            aria-label="View or Update Primary Care Provider"
            href="/myPrimaryCareProvider"
            style="display: block;"
          >
            <button
              class="flex flex-row link-container !text-left"
              style="max-width: max-content; height: auto; display: block;"
              tabindex="-1"
              type="button"
            >
              <p
                class="link undefined"
              >
                View or Update Primary Care Provider
              </p>
            </button>
          </a>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="card-main large-section"
    >
      <div>
        <h1
          class="title-1 title-2"
        >
          My Primary Care Provider
        </h1>
        <span
          style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
        />
        <div
          class="card-main neutral container mt-4"
        >
          <div
            class="flex flex-row flex flex-row align-top m-4"
          >
            <img
              alt="alert"
              class="icon"
              data-nimg="1"
              decoding="async"
              height="40"
              loading="lazy"
              src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
              srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
              style="color: transparent;"
              width="40"
            />
            <span
              style="display: block; width: 8px; min-width: 8px; height: 1px; min-height: 1px;"
            />
            <div
              class="flex flex-row flex flex-col flex-grow"
            >
              <p
                class="body-1"
              >
                Oops, it looks like something went wrong. Try again later.
              </p>
            </div>
          </div>
        </div>
        <span
          style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
        />
        <a
          aria-label="View or Update Primary Care Provider"
          href="/myPrimaryCareProvider"
          style="display: block;"
        >
          <button
            class="flex flex-row link-container !text-left"
            style="max-width: max-content; height: auto; display: block;"
            tabindex="-1"
            type="button"
          >
            <p
              class="link undefined"
            >
              View or Update Primary Care Provider
            </p>
          </button>
        </a>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Primary Care Provider should render the UI correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="card-main large-section"
      >
        <div>
          <h1
            class="title-1 title-2"
          >
            My Primary Care Provider
          </h1>
          <span
            style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
          />
          <div
            class="card-main large-section"
          >
            <p
              class="body-1 body-1 font-bold"
              style="display: block;"
            >
              Louthan, James D.
            </p>
            <p
              class="body-1 body-1"
              style="display: block;"
            >
              Primary Care Provider
            </p>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
            <p
              class="body-1 body-2"
              style="display: block;"
            >
              Facility Address
            </p>
            <p
              class="body-1 body-1"
              style="display: block;"
            >
              2033 Meadowview Ln Ste 200
            </p>
            <p
              class="body-1 body-1"
              style="display: block;"
            >
              Kingsport TN 37660-7432
            </p>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
            <p
              class="body-1 body-2"
              style="display: block;"
            >
              Phone
            </p>
            <p
              class="body-1 body-1"
              style="display: block;"
            >
              (423) 857-2260
            </p>
          </div>
          <span
            style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
          />
          <a
            aria-label="View or Update Primary Care Provider"
            href="/myPrimaryCareProvider"
            style="display: block;"
          >
            <button
              class="flex flex-row link-container !text-left"
              style="max-width: max-content; height: auto; display: block;"
              tabindex="-1"
              type="button"
            >
              <p
                class="link undefined"
              >
                View or Update Primary Care Provider
              </p>
            </button>
          </a>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="card-main large-section"
    >
      <div>
        <h1
          class="title-1 title-2"
        >
          My Primary Care Provider
        </h1>
        <span
          style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
        />
        <div
          class="card-main large-section"
        >
          <p
            class="body-1 body-1 font-bold"
            style="display: block;"
          >
            Louthan, James D.
          </p>
          <p
            class="body-1 body-1"
            style="display: block;"
          >
            Primary Care Provider
          </p>
          <span
            style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
          />
          <p
            class="body-1 body-2"
            style="display: block;"
          >
            Facility Address
          </p>
          <p
            class="body-1 body-1"
            style="display: block;"
          >
            2033 Meadowview Ln Ste 200
          </p>
          <p
            class="body-1 body-1"
            style="display: block;"
          >
            Kingsport TN 37660-7432
          </p>
          <span
            style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
          />
          <p
            class="body-1 body-2"
            style="display: block;"
          >
            Phone
          </p>
          <p
            class="body-1 body-1"
            style="display: block;"
          >
            (423) 857-2260
          </p>
        </div>
        <span
          style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
        />
        <a
          aria-label="View or Update Primary Care Provider"
          href="/myPrimaryCareProvider"
          style="display: block;"
        >
          <button
            class="flex flex-row link-container !text-left"
            style="max-width: max-content; height: auto; display: block;"
            tabindex="-1"
            type="button"
          >
            <p
              class="link undefined"
            >
              View or Update Primary Care Provider
            </p>
          </button>
        </a>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
